// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs Component closes the first tab and opens any clicked tab 1`] = `
<div>
  <button
    key="0"
    onClick={[Function]}
  >
    First tab
  </button>
  <button
    key="1"
    onClick={[Function]}
  >
    Second tab
  </button>
  <button
    key="2"
    onClick={[Function]}
  >
    3rd tab
  </button>
  <div
    className="content"
  >
    Laboriosam execritanonetmiom quos cosnceuter elalelflewk.
  </div>
</div>
`;

exports[`Tabs Component renders empty when given no tabs 1`] = `<div />`;

exports[`Tabs Component renders the first tab by default 1`] = `
<div>
  <button
    key="0"
    onClick={[Function]}
  >
    First tab
  </button>
  <button
    key="1"
    onClick={[Function]}
  >
    Second tab
  </button>
  <button
    key="2"
    onClick={[Function]}
  >
    3rd tab
  </button>
  <div
    className="content"
  >
    Loruem imspon fadolra sit amet csonecut dipipti fjkljoal.
  </div>
</div>
`;
